@@ -1,5 +1,12 @@
 2003-05-22  Mo DeJong  <mdejong@users.sourceforge.net>
 
+	* parsers/php/phpbrowser.c: Regen.
+	* parsers/php/phpbrowser.l: Add a simple debug
+	dump function that can be used to print out
+	matched rules and text as they are made.
+
+2003-05-22  Mo DeJong  <mdejong@users.sourceforge.net>
+
 	* parsers/m4/m4browser.c: Regen.
 	* parsers/m4/m4browser.l: Pass SN_FUNC_DEF
 	as the second argument to sn_insert_xref
